--- a/angular.json
+++ b/angular.json
@@ -26,9 +26,12 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/indigo-pink.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -98,6 +101,6 @@
     }
   },
   "cli": {
-    "analytics": "3d0af52a-7ec6-4379-bfe5-8d1c4f507dd1"
+    "analytics": "aa875e7c-4b2b-4db8-845b-2bb9c357cc49"
   }
 }
